--- a/vcweb/core/templates/experimenter/register-simple-participants.html
+++ b/vcweb/core/templates/experimenter/register-simple-participants.html
@@ -1,2 +1,7 @@
 {% extends "experimenter/register-participants.html" %}
+{% block participant_registration_header %}
+<h3>Test Participant Registration</h3>
+<div class='alert alert-block alert-error'><h4 class='alert-heading'>NOTE</h4>This should only be used for testing experiments.</div>
+{% endblock %}
+
 
