--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -16,14 +16,8 @@
 {% block head %}
 <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.css">
-<link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap-responsive.css">
-<!--
-        <link rel="stylesheet" href="{{STATIC_URL}}css/blueprint/screen.css" type="text/css" media="screen, projection" />
-        <link rel="stylesheet" href="{{STATIC_URL}}css/blueprint/print.css" type="text/css" media="print" />
-        -->
+<link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
 <!--[if lt IE 8]><link rel="stylesheet" href="{{STATIC_URL}}media/css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
-<!--<link href="{{STATIC_URL}}css/guarantee/style.css" rel="stylesheet" type="text/css" media="screen" />-->
 <link href="{{STATIC_URL}}css/style.css" rel="stylesheet" type="text/css" media="screen" />
 {% endblock %}
 </head>
@@ -109,8 +103,7 @@
         <br />
         </p>
         <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
-        <script type='text/javascript' src='{{STATIC_URL}}js/bootstrap-tooltip.js'></script>
-        <script type='text/javascript' src='{{STATIC_URL}}js/bootstrap-popover.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/knockout.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
         {% include "includes/jquery.ui.html" %}
