fixing password reset / done forms

--- a/vcweb/core/templates/account/password_reset_done.html
+++ b/vcweb/core/templates/account/password_reset_done.html
@@ -1,19 +1,13 @@
-{% extends "forms/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}VCWEB Password Reset Complete{% endblock %}
 
-{% block head %}
-{{ block.super }}
-<script type='text/javascript'>
-</script>
-{% endblock head %}
-
-{% block content %}
-
+{% block page %}
+<h3>Reminder sent</h3>
 <p>
-We've sent you an email with instructions on resetting your password.  Please <a href='/contact'>contact us</a> if you
+We've sent you an email with instructions on resetting your password.  Please <a href='/contact'>let us know</a> if you
 don't receive the email or encounter other problems.
 </p>
 
-{% endblock content %}
+{% endblock %}
 
