--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -31,15 +31,21 @@
                 <li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
                 <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
                 <li class='{% active request contact %}'><a href='{{ contact }}'>Contact us</a></li>
-                <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a Bug</a></li>
+                <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a bug</a></li>
+                {% if "participate" in request.path or "wait" in request.path %}
+                <li class='{% active_re request "participate" %} {% active_re request "wait" %}'><a href='#'>Participate</a></li>
+                {% endif %}
+                {% if "experiment" in request.path %}
+                <li class='{% active_re request "experiment" %}'><a name='experiment'>Experiment</a></li>
+                {% endif %}
                 {% if request.user.is_authenticated %}
-                    <li class='{% active request logout %}'><a href='{{ logout }}'>Logout</a></li>
+                <li class='{% active request logout %}'><a href='{{ logout }}'>Logout ({{request.user.email}})</a></li>
                     {% else %}
                     <li class='{% active request login %} {% active request register %}'>
                         {% if debug_mode %}
-                            <a href='{{ login }}'>Login/Register</a>
+                            <a href='{{ login }}'>Sign In</a>
                         {% else %}
-                            <a href='https://{{request.get_host}}{{ login }}'>Login/Register</a>
+                            <a href='https://{{request.get_host}}{{ login }}'>Sign In</a>
                         {% endif %}
                     </li>
                 {% endif %}
